--- a/composer.json
+++ b/composer.json
@@ -3,23 +3,21 @@
     "type": "project",
     "description": "Modern Vehicle Management System with Laravel API backend",
     "keywords": ["laravel", "framework", "vehicle", "management", "api"],
-    "license": "MIT",
-    "require": {
-        "php": "^8.1",
+    "license": "MIT",    "require": {
+        "php": "^7.4|^8.0",
         "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.2",
+        "laravel/framework": "^9.0",
+        "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.8"
-    },
-    "require-dev": {
+    },    "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "nunomaduro/collision": "^6.0",
+        "phpunit/phpunit": "^9.5",
+        "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
         "psr-4": {
